3.4
	+ Added auditable property to EBox::Model::DataTable
	+ Added HAProxyPreSetConf to HaProxy::ServiceBase
	+ Moved management of webadmin certificate to HAProxy module
	+ Enable ReverseProxy middleware always
	+ MySQL is restarted before creating database
	+ Use root ownership for webadmin certificates
	+ Execute change hostname actions only if the hostname has really changed
	+ Don't expire session on finish software wizard page
	+ Fixed show help JS to avoid to have help elements with different
	  show state
	+ Use window.location.replace instead of window.location.href
	  to redirect using JS
	+ In EBox::Type::Select, use element value as printableValue for
	  unknown options or options without printableValue
	+ Save haproxy config as changed after webadmin's initialSetup
	+ Send restartUI flag to restart service when restarting a module
	  from the UI
	+ Fix calculation of page number when using go to last page control
	+ Update tracker url in dashboard widget
	+ Continue installation without ads if there is a error getting them
	+ Added EBox::WebAdmin::Middleware::SubAppAuth to validate
	  WebAdmin sub-app requests
	+ Ported restricted resources to use nginx
	+ Removed EBox::Base::upload method because that's 100% handled by Plack
	  now.
	+ Increased the buffer size for uwsgi applications to allow big submits
	  like the one from automatic error report
	+ Added a UnhandledError middleware to catch any die or exception not
	  handled by Zentyal
	+ Added a Devel::StackTrace helper view that shows pretty backtraces
	+ Enable crash reports by default
	+ Added template for download link
	+ Created EBox::Util::Certificate, refactored create-certificate
	  script
	+ Changes in haproxy port validation and allow haproxy internal services
	+ Restore AdminPort model for WebAdmin to improve usability
	+ Added EBox::Module::Config::replicationExcludeKeys()
	+ Added EBox::WebAdmin::PortObserver to be used by ha and
	  remoteservices modules by the moment