@@ -1,4 +1,5 @@
 3.4
+	+ Remove idle and dead code from EBox::Module::Service::writeConfFile
 	+ Added auditable property to EBox::Model::DataTable
 	+ Added HAProxyPreSetConf to HaProxy::ServiceBase
 	+ Moved management of webadmin certificate to HAProxy module
